--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-border: #ccc;
+  --border-radius: 30px;
 }
 /* typography */
 html {
@@ -197,4 +199,37 @@ a {
   .btn {
     font-size: 1.5rem;
   }
+}
+/* input */
+.input {
+  padding: 1.5rem 3.5rem;
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  outline: 0;
+  color: var(--color-headings);
+  font-size: 2rem;
+}
+::placeholder {
+  color: #cdcbd7;
+}
+@media screen AND (min-width: 1024px) {
+  .input {
+    font-size: 1.5rem;
+  }
+}
+.input-group {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+}
+.input-group .input {
+  border: 0;
+  flex-grow: 1;
+  padding: 1.5rem 1rem;
+}
+.input-group .btn {
+  margin: 4px;
 }
