--- a/components/icon.html
+++ b/components/icon.html
@@ -1,5 +1,3 @@
-<span class="icon-container">
-  <svg class="icon icon--primary">
-    <use href="#quotes"></use>
-  </svg>
+<span class="icon icon--primary">
+  <img width="50%" src="images/snap.svg" alt="" />
 </span>
