this is the end my friend.

--- a/components/block-footer.html
+++ b/components/block-footer.html
@@ -3,9 +3,14 @@
     <section class="collapsible collapsible--expanded footer__section">
       <header class="collapsible__header">
         <h2 class="collapsible__heading footer__heading">Products</h2>
-        <svg class="icon icon--white collapsible__chevron">
-          <use xlink:href="images/sprite.svg#chevron"></use>
-        </svg>
+        <span class="icon icon--primary">
+          <img
+            class="collapsible__chevron"
+            width="50%"
+            src="images/chevron.svg"
+            alt=""
+          />
+        </span>
       </header>
       <div class="collapsible__content">
         <ul class="list">
@@ -18,9 +23,14 @@
     <section class="collapsible footer__section">
       <header class="collapsible__header">
         <h2 class="collapsible__heading footer__heading">Company</h2>
-        <svg class="icon icon--white collapsible__chevron">
-          <use xlink:href="images/sprite.svg#chevron"></use>
-        </svg>
+        <span class="icon icon--primary">
+          <img
+            class="collapsible__chevron"
+            width="50%"
+            src="images/chevron.svg"
+            alt=""
+          />
+        </span>
       </header>
       <div class="collapsible__content">
         <ul class="list">
@@ -33,9 +43,14 @@
     <section class="collapsible footer__section">
       <header class="collapsible__header">
         <h2 class="collapsible__heading footer__heading">Support</h2>
-        <svg class="icon icon--white collapsible__chevron">
-          <use xlink:href="images/sprite.svg#chevron"></use>
-        </svg>
+        <span class="icon icon--primary">
+          <img
+            class="collapsible__chevron"
+            width="50%"
+            src="images/chevron.svg"
+            alt=""
+          />
+        </span>
       </header>
       <div class="collapsible__content">
         <ul class="list">
@@ -48,9 +63,14 @@
     <section class="collapsible footer__section">
       <header class="collapsible__header">
         <h2 class="collapsible__heading footer__heading">Domains</h2>
-        <svg class="icon icon--white collapsible__chevron">
-          <use xlink:href="images/sprite.svg#chevron"></use>
-        </svg>
+        <span class="icon icon--primary">
+          <img
+            class="collapsible__chevron"
+            width="50%"
+            src="images/chevron.svg"
+            alt=""
+          />
+        </span>
       </header>
       <div class="collapsible__content">
         <ul class="list">
