--- a/components/icon.html
+++ b/components/icon.html
@@ -1,3 +1,3 @@
 <span class="icon icon--primary">
-  <img width="50%" src="images/snap.svg" alt="" />
+  <img src="images/snap.svg" alt="" />
 </span>
