--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,9 @@
 html {
   font-size: 62.5%;
 }
+img {
+  width: 100%;
+}
 body {
   font-size: 2.4rem;
   line-height: 1.5;
@@ -112,7 +115,6 @@ a {
   font-size: bold;
   list-style: none;
   padding-left: 0;
-  color: var(--color-headings);
 }
 .list--inline .list__item {
   display: inline-block;
@@ -162,7 +164,7 @@ a {
   font-weight: 600;
   outline: 0;
   font-size: 1.8rem;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   border: 0;
   border-radius: 40px;
   color: white;
@@ -233,7 +235,9 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
+
 .input-group .btn {
   margin: 4px;
 }
@@ -406,10 +410,10 @@ a {
 .testimonial {
   padding: 3rem;
 }
-.testimonial__image > img {
-  width: 100%;
+.testimonial .quote {
+  margin: 2rem 0;
+  font-size: 90%;
 }
-
 @media screen and (min-width: 768px) {
   .testimonial__image {
     margin: 0;
@@ -429,6 +433,10 @@ a {
 .callout {
   padding: 4rem;
   border-radius: 5px;
+  position: relative;
+  max-width: 80vw;
+  left: 10vw;
+  top: 5vh;
 }
 
 .callout--primary {
@@ -520,15 +528,20 @@ a {
 .block--dark .block__heading {
   color: #fff;
 }
+.block--dark h1,
+.block--dark h2,
+.block--dark h3 {
+  color: #fff;
+}
 
 .block--skewed-right {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
 }
 
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
 }
 
 .container {
@@ -608,8 +621,9 @@ a {
   max-width: 670px;
 }
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   font-weight: 600;
   font-size: 2rem;
   justify-items: center;
@@ -643,12 +657,16 @@ a {
 .feature__image {
   width: 100%;
 }
+.feature__content {
+  color: var(--color-body);
+}
 @media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
   }
 }
 /* Showcase Block */
+
 .block-showcase__image > img {
   width: 100%;
 }
@@ -663,7 +681,6 @@ a {
   }
 
   .block-showcase__image > img {
-    width: auto;
     max-width: 700px;
   }
 }
